# Place-Recognition

./: BowVocabulary.cpp  BowVocabulary.h  CMakeLists.txt  DataParser.cpp  DataParser.h  PlaceRecognition.pro  README.txt  bayesExample.cpp  crossvalidation.cpp  crossvalidation.h  datahandler.cpp  datahandler.h  engine.h  examples.cpp  examples.h  fold.cpp  fold.h  foldsextraction.cpp  foldsextraction.h  foldsextraction.h.autosave  main.cpp  svmclassifier.cpp  svmclassifier.h  tinydir.h
